Archive2/89/9430eb33311d4c/output
main.cpp:8:17: error: no member named 'tm_month' in 'tm'; did you mean 'tm_mon'?
    currentTime.tm_month = 9 - 1;
                ^~~~~~~~
                tm_mon
/usr/include/time.h:139:7: note: 'tm_mon' declared here
  int tm_mon;                   /* Month.       [0-11] */
      ^
main.cpp:12:17: error: no member named 'tm_second' in 'tm'; did you mean 'tm_sec'?
    currentTime.tm_second = 0;
                ^~~~~~~~~
                tm_sec
/usr/include/time.h:135:7: note: 'tm_sec' declared here
  int tm_sec;                   /* Seconds.     [0-60] (1 leap second) */
      ^
main.cpp:13:17: error: no member named 'tm_weekday' in 'tm'; did you mean 'tm_wday'?
    currentTime.tm_weekday = 7 - 1;
                ^~~~~~~~~~
                tm_wday
/usr/include/time.h:141:7: note: 'tm_wday' declared here
  int tm_wday;                  /* Day of week. [0-6] */
      ^
main.cpp:17:18: error: no member named 'tm_month' in 'tm'; did you mean 'tm_mon'?
    previousTime.tm_month = 9 - 1;
                 ^~~~~~~~
                 tm_mon
/usr/include/time.h:139:7: note: 'tm_mon' declared here
  int tm_mon;                   /* Month.       [0-11] */
      ^
main.cpp:21:18: error: no member named 'tm_second' in 'tm'; did you mean 'tm_sec'?
    previousTime.tm_second = 0;
                 ^~~~~~~~~
                 tm_sec
/usr/include/time.h:135:7: note: 'tm_sec' declared here
  int tm_sec;                   /* Seconds.     [0-60] (1 leap second) */
      ^
main.cpp:22:18: error: no member named 'tm_weekday' in 'tm'; did you mean 'tm_wday'?
    previousTime.tm_weekday = 7 - 1;
                 ^~~~~~~~~~
                 tm_wday
/usr/include/time.h:141:7: note: 'tm_wday' declared here
  int tm_wday;                  /* Day of week. [0-6] */
      ^
6 errors generated.
